[gd_scene load_steps=5 format=2]

[ext_resource path="res://bed-dishes/bed.png" type="Texture" id=1]
[ext_resource path="res://hold e/hold e.tscn" type="PackedScene" id=2]
[ext_resource path="res://bed-dishes/Bed.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 85.8567
height = 141.48

[node name="Bed" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.68369, 7.29601 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -97.4262, -37.0532, -106.972, -23.9717, 105.867, -25.3859, 97.7353, -38.4674 )

[node name="hold e" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -95 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="animation_finished" from="hold e/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="hold e"]
